# ship-detection-U-Net-experiments

./: README.md  SAR_Ship_Segmentation_using_U-Net_Augmentation_Dual_Net.docx  SAR_Ship_Segmentation_using_U-Net_Augmentation_Dual_Net.md  pyproject.toml  train_ship_detection_experiment_04_unet_tuned_augmentation.ipynb  train_ship_detection_experiment_05_unet_optimized_augementation.ipynb  train_ship_detection_experiment_06_ with_skelton_and_dual_head_Unet.ipynb
data/Patches/images/: patch_0.tif  patch_0.tif.aux.xml  patch_00000.tif  patch_00000.tif.aux.xml  patch_00001.tif  patch_00001.tif.aux.xml  patch_00002.tif  patch_00003.tif  patch_00003.tif.aux.xml  patch_00004.tif  patch_00005.tif  patch_00006.tif  patch_00006.tif.aux.xml  patch_00007.tif  patch_00008.tif  patch_00009.tif  patch_00010.tif  patch_00011.tif  patch_00012.tif  patch_00013.tif  patch_00014.tif  patch_00015.tif  patch_00016.tif  patch_00017.tif  patch_00018.tif  patch_00019.tif  patch_00020.tif  patch_00021.tif  patch_00022.tif  patch_00023.tif  patch_00024.tif  patch_00025.tif  patch_00026.tif  patch_00027.tif  patch_00028.tif  patch_00029.tif  patch_00030.tif  patch_00031.tif  patch_00032.tif  patch_00033.tif  (+467 more)
data/Patches/masks/: mask_00000.tif  mask_00000.tif.aux.xml  mask_00001.tif  mask_00002.tif  mask_00003.tif  mask_00004.tif  mask_00005.tif  mask_00006.tif  mask_00007.tif  mask_00008.tif  (+487 more)
src/: train_ship_detection_experiment_01_baseline_unet.ipynb  train_ship_detection_experiment_02_unet_strong_augmentation.ipynb  train_ship_detection_experiment_03_unet_augmented_training.ipynb
