[project]
name = "ship-detection-unet-experiments"
version = "0.1.0"
description = "Ship Detection using U-Net and Dual-Head U-Net on SAR imagery"
readme = "README.md"
authors = [
    { name = "Temesghen" }
]

requires-python = ">=3.12"

keywords = [
    "deep-learning",
    "u-net",
    "ship-detection",
    "sar",
    "segmentation"
]

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "albumentations>=1.4.0",
    "rasterio>=1.3.9",
    "scipy>=1.11.0",
    "opencv-python>=4.9.0"
]

classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

# Build system 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


# Ruff 

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"